--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.89.2",
+    "swiper": "^12.0.3",
     "typescript": "^4.4.2",
     "vite": "^7.0.4",
     "vite-plugin-html": "^3.2.2",
